--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,10 @@
     <artifactId>extentreports</artifactId>
     <version>5.0.8</version>
 </dependency>
-
-
-  	<dependency>
-  		<groupId>Practice</groupId>
-  		<artifactId>Practice</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-  	</dependency>
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.6</version>
+</dependency>  
   </dependencies>
 </project>
