--- a/pom.xml
+++ b/pom.xml
@@ -42,5 +42,13 @@
     <artifactId>commons-io</artifactId>
     <version>2.6</version>
 </dependency>  
+
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.32</version>
+    <scope>provided</scope>
+</dependency>
+
   </dependencies>
 </project>
