--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,11 @@
 
   <dependencies>
   
-  <dependency>
+  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>3.141.59</version>
+    <version>4.33.0</version>
 </dependency>
     
 <dependency>
@@ -49,6 +50,14 @@
     <version>1.18.32</version>
     <scope>provided</scope>
 </dependency>
+
+
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.8.0</version> <!-- latest stable -->
+</dependency>
+
 
   </dependencies>
 </project>
